--- a/css/software_wide_style.css
+++ b/css/software_wide_style.css
@@ -3194,10 +3194,13 @@ li.sidebar-lower-level.active,li.sidebar-lower-level.active span {
 }
 body.innerframe { background-image:none; }
 
-.hide-header-footer { position:absolute; top:0; left:50%; z-index:1000; }
-    .pullup { background-color:#eee; border:1px solid #666; cursor:pointer; margin-right:10px; opacity:0.2; padding:10px; }
+.hide-header-footer { margin-top:10px; }
+    .pullup { background-color:#eee; border:1px solid #666; cursor:pointer; margin-top:2px; margin-right:8px; padding:5px; }
+        .pullup img { max-width:20px; }
         .pullup:hover { opacity:1; }
-.hide-header-footer.down { top:0; }
+.hide-header-footer-down { position:fixed; top:0; left:50%; z-index:9999; }
+    .hide-header-footer-down .pullup { margin-top:0; opacity:0.2; }
+        .hide-header-footer-down .pullup:hover { opacity:1; }
     
 .rotate { transform:rotate(180deg); }
 
