--- a/css/style_precision.css
+++ b/css/style_precision.css
@@ -283,7 +283,7 @@ b, strong {
   font-weight: 600; }
 
 a {
-    color: #000 !important;
+    color: #e83324 !important;
     text-decoration: none; }
   a:hover, a:focus {
     color: #e83324 !important;
@@ -5165,6 +5165,7 @@ display: table-cell;
 .default-color, h1, h1 a, h4, .dashboard-item label, .main-item label, .text-blue { color:#e83324 !important; }
 .tile-sidebar ul li.active { background-color:#e83324 !important; }
 ul.sidebar .active.blue, .tile-sidebar .sidebar-higher-level ul li.active { background-color:transparent !important; color:#e83324 !important; }
+.blue { background-color:#e83324 !important; color:#fff !important; }
 .blue-border { border-color:#e83324 !important; }
 .summary-block, .main-screen-white { border:1px solid #e83324 !important; }
 .info-block-header {background-color:#ddd !important; border-bottom:4px solid #e83324 !important; }
