Pink Wand: Cleans Calendar #8413

--- a/css/software_wide_style.css
+++ b/css/software_wide_style.css
@@ -3283,3 +3283,8 @@ position: relative;
 
   .no-more-tables-forced td:before {
     content: attr(data-title); }
+
+.left-dialog-button {
+	position: absolute;
+	left: 1.5em;
+}
