Alternate Notes Row Colour Ticket 8624 ROOK

--- a/css/software_wide_style.css
+++ b/css/software_wide_style.css
@@ -3288,3 +3288,7 @@ position: relative;
 	position: absolute;
 	left: 1.5em;
 }
+
+.row-even-bg, .row-odd-bg { padding:5px 10px; }
+    .row-even-bg { background-color:#f6f6f6; }
+    .row-odd-bg { background-color:#e9e9e9; }
