--- a/css/style_green.css
+++ b/css/style_green.css
@@ -6473,7 +6473,7 @@ a.tclabel:hover {
 	#no-more-tables td:before,
 	.no-more-tables td:before {
 		content: attr(data-title);
-		color: #fff;
+		color: #000;
 	}
 }
 .spacer {
